--- a/main.css
+++ b/main.css
@@ -1,197 +1,241 @@
+.color-change {
+    font-size: 2em;
+}
+
+h1 {
+    margin-left: 20px;
+}
+
 * {
-
-  
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
-  font-family: Georgia, "Times New Roman", Times, serif;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+    font-family: Georgia, "Times New Roman", Times, serif;
 }
+
 body {
-    margin: 0; /* Eliminar el margen predeterminado */
-    border: 8px solid lightblue; /* Agregar un borde y establecer su color */
+    margin: 0;
+    border: 8px solid lightblue;
 }
-
+.mensaje {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centrar horizontalmente */
+    justify-content: center; /* Centrar verticalmente */
+    text-align: center; /* Alinear texto al centro */
+    margin-top: 50px; /* Espacio superior */
+    margin-bottom: 50px; /* Espacio inferior */
+background-color: lightpink;
+}
 .section1 {
-  background: url(images/13.jpg);
-  background-size: 100% 100%;
-  background-position: center, center;
-  height: 100vh;
-  width: 100%;
+    background: url(images/13.jpg);
+    background-size: 100% 100%;
+    background-position: center, center;
+    height: 100vh;
+    width: 100%;
 }
-@media (max-aspect-ratio: 1/1) {
-  .section1 {
-background-color: pink;
-    background-size: contain;
 
- /* Cambia el tamaño de la imagen para contener todo el contenido */
-  }
+@media (max-aspect-ratio: 1/1) {
+    .section1 {
+        background-color: pink;
+        background-size: contain;
+    }
 }
 
 .encabezado {
-  margin: 0 auto;
-  padding: 40px 0;
-  display: flex;
-  height: 100%;
-  width: 90%;
-  justify-content: space-between;
+    margin: 0 auto;
+    padding: 40px 0;
+    display: flex;
+    height: 100%;
+    width: 90%;
+    justify-content: space-between;
 }
 
 .encabezado__navegacion--lista {
-  color: white;
-  margin: 0 40px;
-  padding: 15px;
-  margin: 3px;
+    color: white;
+    margin: 0 40px;
+    padding: 15px;
+    margin: 3px;
 }
 
 .encabezado__navegacion--lista:hover {
-  border-radius: 50px;
-  background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50px;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .encabezado__logo {
-  height: 40px;
+    height: 40px;
 }
 
 .encabezado__titulo {
-  position: fixed;
-  top: 50%; /* posiciona el elemento en el centro vertical de la pantalla */
-  left: 50%; /* posiciona el elemento en el centro horizontal de la pantalla */
-  transform: translate(-50%, -50%); /* centra el elemento en la pantalla */
-  text-align: center;
-  width: 600px;
-margin-bottom: 20px
-  height: 100px;
-  display: flex;
-  flex-direction: column;
-  color: white;
-  font-size: 2em;
-  z-index: 999; /* asegura que el elemento esté por encima del resto del contenido */
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 600px;
+    margin-bottom: 20px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-size: 2em;
+    z-index: 999;
 }
+
 #subtitle {
-  font-size: 1em;
-  transition: font-size 0.5s ease;
+    font-size: 1em;
+    transition: font-size 0.5s ease;
 }
 
 button {
-  margin: 10px;
-  padding: 10px 20px;
-  font-size: 1em;
-  border: none;
-  cursor: pointer;
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 1em;
+    border: none;
+    cursor: pointer;
 }
 
 #yesBtn {
-  background-color: green;
-  color: white;
+    background-color: green;
+    color: white;
 }
 
 #noBtn {
-  background-color: red;
-  color: white;
+    background-color: red;
+    color: white;
 }
+
 .encabezado__titulo h1 {
-  text-align: center;
-  width: 600px;
-  height: 100px;
-  display: flex;
-  flex-direction: column;
-  font-size: 2em;
-  animation: cambiaColor 5s infinite; /* Cambia de color cada 5 segundos */
+    text-align: center;
+    width: 600px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.4em;
+    animation: cambiaColor 5s infinite;
 }
+
 .footer {
     display: flex;
-
-    justify-content: center; /* Centra horizontalmente los videos */
+    justify-content: center;
 }
 
 .footer__video {
-    margin: 0px 1px; /* Espacio entre los videos */
-	padding-top: 50px;
-width:300px;
+    margin: 0px 1px;
+    padding-top: 50px;
+    width: 300px;
 }
+
 .rainbow-text {
-        animation: rainbow 6s infinite;
+    animation: rainbow 6s infinite;
+}
+
+@keyframes rainbow {
+    0% { color: red; }
+    16.67% { color: orange; }
+    33.33% { color: yellow; }
+    50% { color: green; }
+    66.67% { color: blue; }
+    83.33% { color: indigo; }
+    100% { color: violet; }
+}
+
+.videos {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px; /* Agrega un margen superior */
+    margin-bottom: 20px; /* Agrega un margen inferior */
+}
+.footer__video {
+    margin: 0 10px; /* Agregar espacio entre los videos */
+}
+.encabezado__flecha {
+    display: block;
+    margin: 0;
+    height: auto;
+    padding-bottom: 80px;
+    -webkit-animation: flecha 3s alternate infinite linear;
+    animation: flecha 3s alternate infinite linear;
+}
+    footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgba(30, 172, 134, 0.4);
+        padding: 50px 0;
     }
 
-    @keyframes rainbow {
-        0% { color: red; }
-        16.67% { color: orange; }
-        33.33% { color: yellow; }
-        50% { color: green; }
-        66.67% { color: blue; }
-        83.33% { color: indigo; }
-        100% { color: violet; }
-    }
 @media only screen and (max-width: 600px) {
-  .encabezado__titulo {
-    text-align: center; /* Centra el texto */
-  }
-  
-  .encabezado__titulo h1 {
-    font-size: 0.7em; /* Tamaño de fuente más pequeño */
-width: 350px;
-  }
+    .encabezado__titulo {
+        text-align: center;
+    }
+
+    .encabezado__titulo h1 {
+        font-size: 1em;
+        width: 350px;
+    }
 }
 
 @keyframes cambiaColor {
-  0% { color: red; }
-  20% { color: orange; }
-  40% { color: yellow; }
-  60% { color: green; }
-  80% { color: blue; }
-  100% { color: violet; }
+    0% { color: red; }
+    20% { color: orange; }
+    40% { color: yellow; }
+    60% { color: green; }
+    80% { color: blue; }
+    100% { color: violet; }
 }
 
 .encabezado__flecha {
-  display: block;
-  margin: 0;
-
-height: auto;
-padding-bottom: 80px;
-  
-  -webkit-animation: flecha 3s alternate infinite linear;
-          animation: flecha 3s alternate infinite linear;
+    display: block;
+    margin: 0;
+    height: auto;
+    padding-bottom: 80px;
+    -webkit-animation: flecha 3s alternate infinite linear;
+    animation: flecha 3s alternate infinite linear;
 }
+
 .encabezado__flecha img {
-  width: 100px; /* ajusta el ancho de la imagen */
-  height: auto; /* permite que la altura se ajuste automáticamente manteniendo la proporción */
+    width: 100px;
+    height: auto;
 }
 
 @-webkit-keyframes flecha {
-  0% {
-    transform: translateY(10%);
-    transform: scale(1);
-  }
-  25% {
-    transform: scale(1.5);
-    transform: translateY(20%);
-  }
-  70% {
-    transform: scale(2.5);
-    transform: translateY(40%);
-  }
+    0% {
+        transform: translateY(5%);
+        transform: scale(0.5);
+    }
+    25% {
+        transform: scale(1);
+        transform: translateY(10%);
+    }
+    70% {
+        transform: scale(1.3);
+        transform: translateY(20%);
+    }
 }
 
 @keyframes flecha {
-  0% {
-    transform: translateY(10%);
-    transform: scale(0.5);
-  }
-  25% {
-    transform: scale(1);
-    transform: translateY(20%);
-  }
-  70% {
-    transform: scale(1.5);
-    transform: translateY(25%);
-  }
+    0% {
+        transform: translateY(10%);
+        transform: scale(0.5);
+    }
+    25% {
+        transform: scale(1);
+        transform: translateY(20%);
+    }
+    70% {
+        transform: scale(1.5);
+        transform: translateY(25%);
+    }
 }
+
 .encabezado__hamburguesa--imagen {
   width: 40px;
   height: 40px;
 }
 
-.encabezado__hamburguesa, .encabezado__checkbox {
+.encabezado__hamburguesa,
+.encabezado__checkbox {
   display: none;
 }
 
@@ -215,7 +259,7 @@ padding-bottom: 80px;
 }
 
 .section2__galeria--parrafo {
-  margin: 100px 0 0 20px;
+  margin: 100px 0 62px 20px;
   padding-right: 20px;
   font-size: 1.5em;
   width: 90%;
@@ -231,26 +275,26 @@ padding-bottom: 80px;
   width: 30%;
   height: 20px;
   text-decoration: underline;
-animation: cambiaColor 5s infinite;
+  animation: cambiaColor 5s infinite;
 }
 
 .section2__galeria--extra:hover {
   -webkit-text-decoration-color: yellow;
-          text-decoration-color: yellow;
+  text-decoration-color: yellow;
 }
 
 .section2__galeria--imagen {
- 
   width: 50%;
-	height:800px;
-  
-}
-
-.imagen--huevo {
-
-  width: 100%; /* Establecer un ancho máximo del 100% */
   height: 800px;
-  
+}
+.footer__paragraph {
+    width: 80%;
+  padding: 30px
+    margin: 20px auto;
+  }
+.imagen--huevo {
+  width: 100%;
+  height: 800px;
 }
 
 .section3 {
@@ -293,15 +337,13 @@ animation: cambiaColor 5s infinite;
 
 .section3__galeria--extra:hover {
   -webkit-text-decoration-color: red;
-          text-decoration-color: red;
+  text-decoration-color: red;
 }
 
 .section3__galeria--imagen {
- 
   width: 50%;
+  height: 600px;
 }
-
-
 
 .section6 {
   width: 100%;
@@ -315,6 +357,10 @@ animation: cambiaColor 5s infinite;
 
 .footer {
   background-color: rgba(30, 172, 134, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .footer__logo {
@@ -346,69 +392,6 @@ animation: cambiaColor 5s infinite;
 .footer__info--lista:hover {
   color: white;
 }
-.footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-
-    .footer__video {
-        margin: 10px;
-    }
-
-   .footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-
-    .footer__video {
-        margin: 10px;
-    }
-
-  .footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-
-    .footer__video {
-        margin: 10px;
-    }
-
-    .footer__paragraph {
-        width: 100%;
-        text-align: center;
-        position: relative;
-        overflow: hidden;
-    }
-
-    .rainbow-background {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        animation: change-colors 6s linear infinite;
-        background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet, red);
-        background-size: 1600% auto;
-    }
-
-    @keyframes change-colors {
-        0% {
-            background-position: 0 0;
-        }
-        100% {
-            background-position: 100% 0;
-        }
-    }
 
 .footer__redes {
   width: 100%;
@@ -430,19 +413,26 @@ animation: cambiaColor 5s infinite;
     height: 800px;
     width: 400px;
   }
-
-
+.videos {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px; /* Agrega un margen superior */
+    margin-bottom: 20px; /* Agrega un margen inferior */
+}
   .encabezado__hamburguesa {
     height: 50px;
     margin-right: 5px;
   }
+
   .encabezado__logo {
     height: 40px;
   }
+
   .encabezado__hamburguesa {
     display: block;
     cursor: pointer;
   }
+
   .encabezado__navegacion {
     height: 700px;
     padding: 0 200px;
@@ -461,37 +451,39 @@ animation: cambiaColor 5s infinite;
     transition: clip-path 1s linear;
     transition: clip-path 1s linear, -webkit-clip-path 1s linear;
     -webkit-clip-path: circle(0 at center);
-            clip-path: circle(0 at center);
+    clip-path: circle(0 at center);
   }
+
   .encabezado__checkbox:checked + .encabezado__navegacion {
     z-index: 1;
     -webkit-clip-path: circle(100% at center);
-            clip-path: circle(100% at center);
-  }
-.contenedor {
-  width: 100%;
-  text-align: center; /* Para centrar el contenido */
-height: 300px;
-}
-.encabezado__titulo {
-	
-    width: 200px; /* Puedes ajustar el ancho según sea necesario */
-    height: 150px; /* Puedes ajustar la altura según sea necesario */
-    padding-bottom:50px;
-top: 300px;
-flex-direction: column; /* Cambia la dirección del flex a columnas */
-    align-items: center; /* Centra los elementos horizontalmente */
-    justify-content: center; /* Centra los elementos verticalmente */
-
- font-size: 1em; /* Puedes ajustar el tamaño de fuente según sea necesario */
+    clip-path: circle(100% at center);
   }
 
-#subtitle {
-  flex-grow: 1; /* Hace que el subtítulo ocupe el espacio disponible */
-  display: flex;
-  align-items: center; /* Centra verticalmente el contenido */
-  justify-content: center; /* Centra horizontalmente el contenido */
-}
+  .contenedor {
+    width: 100%;
+    text-align: center;
+    height: 300px;
+  }
+
+  .encabezado__titulo {
+    width: 200px;
+    height: 150px;
+    padding-bottom: 50px;
+    top: 300px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1em;
+  }
+
+  #subtitle {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   .section2 {
     height: 800px;
     width: 400px;
@@ -500,30 +492,32 @@ flex-direction: column; /* Cambia la dirección del flex a columnas */
     text-align: center;
     flex-direction: column;
   }
+
   .section2__galeria {
     width: 400px;
-height: 0;
-   
+    height: 0;
   }
+
   .section2__galeria--titulo {
     width: 50%;
     height: 50px;
     margin: 50px 20px 50px 100px;
   }
+
   .section2__galeria--parrafo {
     margin: auto;
     font-size: 1.5em;
     width: 70%;
-    height: 300px;
+    height: 300
+px;
     color: rgba(10, 10, 10, 0.8);
     line-height: 30px;
   }
+
   .section2__galeria--imagen {
-    
     width: 100%;
-
-
   }
+
   .section3 {
     height: 100%;
     width: 400px;
@@ -532,15 +526,18 @@ height: 0;
     text-align: center;
     flex-direction: column;
   }
+
   .section3__galeria {
     width: 400px;
     height: 800px;
   }
+
   .section3__galeria--titulo {
     width: 50%;
     height: 50px;
     margin: 50px 0 50px 100px;
   }
+
   .section3__galeria--parrafo {
     margin: auto;
     font-size: 1.5em;
@@ -549,61 +546,38 @@ height: 0;
     color: rgba(10, 10, 10, 0.8);
     line-height: 30px;
   }
+
   .section3__galeria--imagen {
-    height:800px;
+    height: 800px;
     width: 400px;
   }
-  
-  .footer {
-    width: 400px;
-    height: auto;
+
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgba(30, 172, 134, 0.4);
-    padding-bottom: 300px;
-margin-top: 100px;
+    padding: 50px 0;
   }
-  .footer__logo {
-    width: 300px;
-    margin-right: 120px;
+
+  .footer__video {
+    margin: 10px 0;
   }
-  .footer__logo--imagen {
-    width: 200px;
-    height: 50px;
-    cursor: pointer;
-  }
-  .footer__info {
-    width: 400px;
+
+  .mensaje {
     text-align: center;
-    font-size: 1em;
-    margin-bottom: 100px;
+    margin-top: 20px;
+
   }
-  .footer__info--lista {
-    color: rgb(58, 138, 111);
-    margin: 15px 15px 120px 15px;
+
+  .footer__paragraph {
+    width: 80%;
+    max-width: 600px;
+    margin: 20px auto;
   }
-  .footer__info--lista:hover {
-    color: white;
+
+  .color-change {
+    font-size: 2em;
   }
-  .footer__redes {
-    width: 400px;
-    display: flex;
-    justify-content: center;
-  }
-  .footer__redes--imagen {
-    margin: 15px 30px 120px 0;
-    cursor: pointer;
-  }
-  .footer__redes--imagen:hover {
-    filter: invert(1);
-  }
-.footer {
-    display: flex;
-    justify-content: center; /* Centra horizontalmente los videos */
 }
 
-.footer__video {
-    margin: 0px 1px; /* Espacio entre los videos */
-	padding-top: 50px;
-}
-
-
-}
